[build-system]
requires = ["setuptools>=75.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Moire"
version = "0.1"
description = "Simple extendable markup"
authors = [
    { name = "Sergey Vartanov", email = "me@enzet.ru" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "black~=24.4.2",
    "mypy~=1.15.0",
    "pytest~=8.3.4",
    "ruff~=0.4.2",
]

[project.urls]
Homepage = "https://github.com/enzet/Moire"

[project.scripts]
moire = "moire.__main__:main"

[tool.setuptools]
packages = ["moire"]

[tool.black]
line-length = 80
skip-magic-trailing-comma = true

[tool.mypy]
python_version = "3.12"
disable_error_code = ["import-untyped"]
disallow_untyped_defs = true  # Report functions without type annotations.
disallow_untyped_decorators = true  # Ensure decorators have types.
warn_return_any = true  # Warn if return type is inferred as `Any`.

[tool.ruff]
select = [
    "E",  # Pycodestyle.
    "F",  # Pyflakes.
    "I",  # Import sorting.
    "B",  # Bugbear.
    "C4",  # Complexity.
    "UP",  # Unused parameters.
    "N",  # Noqa.
    "W",  # Warnings.
    "RUF",  # Ruff.
]
ignore = [
    "ANN",  # Type annotations (handled by mypy).
]

# Allow autofix for all enabled rules (when `--fix` is used).
fixable = ["ALL"]
unfixable = []

# Same line length as Black.
line-length = 80
