[build-system]
requires = ["setuptools>=75.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Moire"
version = "0.1"
description = "Simple extendable markup"
authors = [
    { name = "Sergey Vartanov", email = "me@enzet.ru" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "black~=24.4.2",
    "mypy~=1.15.0",
    "pytest~=8.3.4",
    "ruff~=0.4.2",
]

[project.urls]
Homepage = "https://github.com/enzet/Moire"

[project.scripts]
moire = "moire.__main__:main"

[tool.setuptools]
packages = ["moire"]

[tool.black]
line-length = 80
skip-magic-trailing-comma = true

[tool.mypy]
python_version = "3.12"
disable_error_code = ["import-untyped"]
disallow_untyped_defs = true  # Report functions without type annotations.
disallow_untyped_decorators = true  # Ensure decorators have types.
warn_return_any = true  # Warn if return type is inferred as `Any`.

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = [
    "ANN101",  # Rule is deleted.
    "C901",  # We allow too complex functions.
    "COM812",  # Trailing comma not in Black style.
    "D105",  # Missing docstring in magic method is allowed.
    "D107",  # Missing docstring in `__init__` method is allowed.
    "D202",  # No blank line after function docstring is allowed.
    "D203",  # 1 blank line required before class docstring.
    "D213",  # We use no new line after """.
    "FIX002",  # We allow todo markers.
    "PLR0911",  # We allow too many return statements.
    "PLR0912",  # We allow too many branches.
    "PLR0913",  # We allow too many arguments.
    "PLR0915",  # We allow too many statements.
    "S101",  # Asserts are OK in tests.
    "TD003",  # We don't require issues for todos.

    # TODO(enzet): enable.
    "ANN401",
    "D102",
]

# Allow autofix for all enabled rules (when `--fix` is used).
lint.fixable = ["ALL"]
lint.unfixable = []

# Same line length as Black.
line-length = 80
