[build-system]
requires = ["setuptools>=75.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Moire"
version = "0.1"
description = "Simple extendable markup"
authors = [
    { name = "Sergey Vartanov", email = "me@enzet.ru" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy~=1.15.0",
    "pytest~=8.3.4",
    "ruff~=0.14.5",
    "ty~=0.0.1a27",
]

[project.urls]
Homepage = "https://github.com/enzet/Moire"

[project.scripts]
moire = "moire.__main__:main"

[tool.setuptools]
packages = ["moire"]

[tool.black]
line-length = 80
skip-magic-trailing-comma = true

[tool.mypy]
python_version = "3.12"
disable_error_code = ["import-untyped"]
disallow_untyped_defs = true  # Report functions without type annotations.
disallow_untyped_decorators = true  # Ensure decorators have types.
warn_return_any = true  # Warn if return type is inferred as `Any`.

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = [
    "C901",  # Too complex functions are allowed.
    "COM812",  # Trailing comma not in Black style.
    "D105",  # Missing docstring in magic method is allowed.
    "D107",  # Missing docstring in `__init__` method is allowed.
    "D202",  # No blank line after function docstring is allowed.
    "D203",  # Blank line is not required before class docstring.
    "D213",  # New line after """ is not needed.
    "FIX002",  # Todo markers are allowed.
    "PLR0911",  # Too many return statements are allowed.
    "PLR0912",  # Too many branches are allowed.
    "PLR0913",  # Too many arguments are allowed.
    "PLR0915",  # Too many statements are allowed.
    "S101",  # Asserts are allowed in tests.
    "TD003",  # Issues for todos are not required.

    # TODO(enzet): enable.
    "ANN401",
]

# Allow autofix for all enabled rules (when `--fix` is used).
lint.fixable = ["ALL"]
lint.unfixable = []

# Same line length as Black.
line-length = 80
